# api/machine/service/v1/machine.swagger.json
@@ -44,6 +44,110 @@
         }
       }
     },
+    "v1CheckCoordinate": {
+      "type": "object",
+      "properties": {
+        "seq": {
+          "type": "string",
+          "format": "int64"
+        },
+        "crd": {
+          "$ref": "#/definitions/v1Coordinate"
+        }
+      }
+    },
+    "v1Coordinate": {
+      "type": "object",
+      "properties": {
+        "x": {
+          "type": "number",
+          "format": "double"
+        },
+        "y": {
+          "type": "number",
+          "format": "double"
+        },
+        "z": {
+          "type": "number",
+          "format": "double"
+        },
+        "rx": {
+          "type": "number",
+          "format": "double"
+        },
+        "ry": {
+          "type": "number",
+          "format": "double"
+        },
+        "check": {
+          "type": "boolean"
+        },
+        "delay": {
+          "type": "number",
+          "format": "double"
+        },
+        "machineId": {
+          "type": "string",
+          "format": "int64"
+        },
+        "checkName": {
+          "type": "string"
+        }
+      }
+    },
+    "v1CronJob": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "int64"
+        },
+        "machineId": {
+          "type": "string",
+          "format": "int64"
+        },
+        "checkName": {
+          "type": "string"
+        },
+        "cronString": {
+          "type": "string"
+        },
+        "checkCoordinates": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/v1CheckCoordinate"
+          }
+        }
+      }
+    },
+    "v1CronJobReply": {
+      "type": "object",
+      "properties": {
+        "cronJob": {
+          "$ref": "#/definitions/v1CronJob"
+        }
+      }
+    },
+    "v1CronJobsReply": {
+      "type": "object",
+      "properties": {
+        "cronJobs": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/v1CronJob"
+          }
+        }
+      }
+    },
+    "v1DeleteCronJobReply": {
+      "type": "object",
+      "properties": {
+        "num": {
+          "type": "string",
+          "format": "int64"
+        }
+      }
+    },
     "v1GetMotorStatusReply": {
       "type": "object",
       "properties": {
